--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.1",
     "child_process": "^1.0.2",
+    "date-fns": "^2.29.3",
     "events": "^3.3.0",
     "expo": "~46.0.9",
     "expo-image-picker": "~13.3.1",
