--- a/package.json
+++ b/package.json
@@ -9,30 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google-cloud/vision": "^3.0.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.1",
-    "child_process": "^1.0.2",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "events": "^3.3.0",
     "expo": "~46.0.9",
+    "expo-auth-session": "~3.7.1",
+    "expo-av": "~12.0.4",
     "expo-image-picker": "~13.3.1",
+    "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
+    "express": "^4.18.1",
     "firebase": "^9.10.0",
-    "fs": "^0.0.1-security",
-    "os": "^0.1.2",
     "path": "^0.12.7",
-    "python-shell": "^3.0.1",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-calendars": "^1.1289.0",
-    "react-native-childprocess": "^0.1.4",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.6.1",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
-    "stream": "^0.0.2"
+    "react-native-spotify-remote": "^0.3.10",
+    "react-native-timeline-flatlist": "^0.8.0",
+    "react-native-track-player": "^3.2.0",
+    "spotify-web-api-js": "^1.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
